SUPPORT-1036: Fixed word wrap in IE11

--- a/themes/loop/css/styles.css
+++ b/themes/loop/css/styles.css
@@ -418,7 +418,6 @@ h6 {
   -webkit-hyphens: auto;
   hyphens: auto;
   overflow-wrap: break-word;
-  -ms-word-break: break-all;
   word-break: break-word;
   word-wrap: break-word;
   margin-top: 0;
